force-app/main/default/objects/Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Available_on_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag that indicates if the qualification is shown on the portal</description>
        <label>Available on Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callista_Code__c</fullName>
        <externalId>true</externalId>
        <label>Callista Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Type_Test__c</fullName>
        <label>English Type Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAE</fullName>
                    <label>CAE: Certificate in Advanced English</label>
                </value>
                <value>
                    <fullName>CPE</fullName>
                    <label>CPE: Certificate of Proficiency in English</label>
                </value>
                <value>
                    <fullName>IELTS</fullName>
                    <label>IELTS: IELTS (International English Language Testing Service) Academic</label>
                </value>
                <value>
                    <fullName>ITOEFL</fullName>
                    <label>ITOEFL: Internet Based TOEFL (Test Of English as a Foreign Language)</label>
                </value>
                <value>
                    <fullName>MEPT</fullName>
                    <label>MEPT: Monash English Language Placement test- MUELC ONLY</label>
                </value>
                <value>
                    <fullName>PTOEFL</fullName>
                    <label>PTOEFL: Paper Based TOEFL (Test Of English as a Foreign Language)</label>
                </value>
                <value>
                    <fullName>PTE</fullName>
                    <label>PTE: Pearson Test of English (Academic)</label>
                </value>
                <value>
                    <fullName>CET-6</fullName>
                    <label>CET-6: COLLEGE ENGLISH TEST CHINA- FOR-NON ENGLISH MAJORS</label>
                </value>
                <value>
                    <fullName>GAMSAT</fullName>
                    <label>GAMSAT: GRADUATE AUSTRALIAN MEDICAL SCHOOL ADMISSION TEST (GAMSAT)</label>
                </value>
                <value>
                    <fullName>IAP</fullName>
                    <label>IAP: ENGLISH FOR INTRODUCTORY ACADEMIC PROGRAM</label>
                </value>
                <value>
                    <fullName>LOI</fullName>
                    <label>LOI: LANGUAGE OF INSTRUCTION FOR TERTIARY STUDY</label>
                </value>
                <value>
                    <fullName>ME</fullName>
                    <label>ME: MONASH ENGLISH</label>
                </value>
                <value>
                    <fullName>MEB10</fullName>
                    <label>MEB10: MONASH ENGLISH BRIDGING - 10 WEEKS</label>
                </value>
                <value>
                    <fullName>MEB15</fullName>
                    <label>MEB15: MONASH ENGLISH BRIDGING - 15 WEEKS</label>
                </value>
                <value>
                    <fullName>MEB17</fullName>
                    <label>MEB17: MONASH ENGLISH BRIDGING - 17 WEEKS</label>
                </value>
                <value>
                    <fullName>MEB20</fullName>
                    <label>MEB20: MONASH ENGLISH BRIDGING - 20 WEEKS</label>
                </value>
                <value>
                    <fullName>MUET</fullName>
                    <label>MUET: MALAYSIAN UNIVERSITY ENGLISH TEST</label>
                </value>
                <value>
                    <fullName>NET</fullName>
                    <label>NET: NATIONAL ENGLISH AS A FOREIGN LANGUAGE TEST IN CHINA</label>
                </value>
                <value>
                    <fullName>STAT</fullName>
                    <label>STAT: SPECIAL TERTIARY ADMISSIONS TEST</label>
                </value>
                <value>
                    <fullName>TEM-8</fullName>
                    <label>TEM-8: COLLEGE ENGLISH TEST CHINA- FOR ENGLISH MAJORS</label>
                </value>
                <value>
                    <fullName>UMAT</fullName>
                    <label>UMAT: UNDERGRADUATE MEDICINE &amp; HEALTH SCIENCES ADMISSION TEST</label>
                </value>
                <value>
                    <fullName>UNITS</fullName>
                    <label>UNITS: 2 UNIVERSITY UNITS (AT LEAST 1 UNIT ENGLISH RICH)</label>
                </value>
                <value>
                    <fullName>VCE-Y11</fullName>
                    <label>VCE-Y11: UNITS 1&amp;2 VCE ENGLISH OR YR11 EQUIV.(FOUNDATION COURSE ONLY)</label>
                </value>
                <value>
                    <fullName>VCE-Y12</fullName>
                    <label>VCE-Y12: 25 IN UNITS 3 &amp; 4 VCE ENGLISH OR EQUIVALENT</label>
                </value>
                <value>
                    <fullName>CLINGUASKL</fullName>
                    <label>CLINGUASKL: Cambridge Linguaskill</label>
                </value>
                <value>
                    <fullName>QCE</fullName>
                    <label>QCE: Queensland Certificate of Education</label>
                </value>
                <value>
                    <fullName>IELTS-O</fullName>
                    <label>IELTS-O: IELTS Online</label>
                </value>
                <value>
                    <fullName>ITOEFL-P</fullName>
                    <label>ITOEFL-P: TOEFL iBT Paper Based Edition</label>
                </value>
                <value>
                    <fullName>TOEFL-E</fullName>
                    <label>TOEFL-E: TOEFL Essentials</label>
                </value>
                <value>
                    <fullName>PTE-O</fullName>
                    <label>PTE-O: Pearson Test of English (Academic Online)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overseas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overseas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Name__c</fullName>
        <label>Qualification Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_UID__c</fullName>
        <description>Unique External Id  combination of Callista_Code__c + Overseas__c and use 1 OR 0 instead of TRUE/FALSE</description>
        <externalId>true</externalId>
        <label>Qualification UID</label>
        <length>21</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_score_Type__c</fullName>
        <label>Sub score Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Listening</fullName>
                </value>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Speaking</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
                <value>
                    <fullName>Test of Written English</fullName>
                </value>
                <value>
                    <fullName>Essay Rating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Qualification</label>
    <listViews>
        <fullName>Admission_Test</fullName>
        <columns>NAME</columns>
        <columns>Qualification_Name__c</columns>
        <columns>Available_on_Portal__c</columns>
        <columns>Callista_Code__c</columns>
        <columns>Sub_score_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Qualification__c.Admission_Test</value>
        </filters>
        <label>Admission Test</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>Callista_Code__c</columns>
        <columns>Qualification_Name__c</columns>
        <columns>English_Type_Test__c</columns>
        <columns>State__c</columns>
        <columns>Overseas__c</columns>
        <columns>Available_on_Portal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QUAL-{000}</displayFormat>
        <label>Qualification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifications</pluralLabel>
    <recordTypes>
        <fullName>Admission_Test</fullName>
        <active>true</active>
        <label>Admission Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>Secondary_Qualification</fullName>
        <active>true</active>
        <label>Secondary Qualification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tertiary_Qualification</fullName>
        <active>true</active>
        <label>Tertiary Qualification</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>